scrollbar issues

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -55,7 +55,7 @@ perspective: 1000;
 .flip-container, .front, .back {
 width: 200px;
 height: 200px;
-overflow: scroll;
+overflow: hidden;
 }
 
 /* flip speed goes here */
@@ -443,7 +443,27 @@ fieldset {
 
 
 
-
+/* ---- flip container text resize to avoid scrollbars ---- */
+@media all and (min-width: 50px)   {  .back  { font-size:0.1em;  } }
+@media all and (min-width: 100px)  {  .back  { font-size:0.2em;  } }
+@media all and (min-width: 200px)  {  .back  { font-size:0.4em;  } }
+@media all and (min-width: 300px)  {  .back  { font-size:0.6em;  } }
+@media all and (min-width: 400px)  {  .back  { font-size:0.8em;  } }
+@media all and (min-width: 500px)  {  .back  { font-size:1.0em;  } }
+/*
+@media all and (min-width: 600px)  {  .back  { font-size:1.2em;  } }
+@media all and (min-width: 700px)  {  .back  { font-size:1.4em;  } }
+@media all and (min-width: 800px)  {  .back  { font-size:1.6em;  } }
+@media all and (min-width: 900px)  {  .back  { font-size:1.8em;  } }
+@media all and (min-width: 1000px) {  .back  { font-size:2.0em;  } }
+@media all and (min-width: 1100px) {  .back  { font-size:2.2em;  } }
+@media all and (min-width: 1200px) {  .back  { font-size:2.4em;  } }
+@media all and (min-width: 1300px) {  .back  { font-size:2.6em;  } }
+@media all and (min-width: 1400px) {  .back  { font-size:2.8em;  } }
+@media all and (min-width: 1500px) {  .back  { font-size:3.0em;  } }
+@media all and (min-width: 1500px) {  .back  { font-size:3.2em;  } }
+@media all and (min-width: 1600px) {  .back  { font-size:3.4em;  } }
+@media all and (min-width: 1700px) {  .back  { font-size:3.6em;  } }*/
 
 
 
